--- a/Тема 19.html
+++ b/Тема 19.html
@@ -55,7 +55,7 @@ opacity:0.8;
 <h1>VOLLEBALL</h1>
 <h2><i>Also known as ball and whiff-whaff</i></h2>
 <hr>
-<img class="photo" src="ball.jpg">
+<img class="photo" src="Ball.jpg">
 <hr>
 <p><b>Волейбол</b> (англ. volleyball від volley — «залп», «удар з льоту», і ball — «м'яч») — вид спорту, командна спортивна гра, в процесі якої дві команди змагаються на спеціальному майданчику, розділеному сіткою, прагнучи направити м'яч на сторону суперника так, щоб він приземлився на майданчику супротивника (добити до підлоги), або гравець команди, що захищається, припустився помилки. При цьому для організації нападу гравцям однієї команди дається не більше трьох торкань м'яча поспіль (на додаток до торкання на блоці). Центральний орган волейболу, як міжнародного виду спорту, що визначає зведення правил FIVB (англ.) — Міжнародна волейбольна федерація. Волейбол — олімпійський вид спорту з 1964 року. Волейбол — неконтактний, комбінаційний вид спорту, де кожен гравець має свою спеціалізацію на майданчику. Найважливішими якостями для гравців у волейболі є стрибучість для можливості високо піднятися над сіткою, реакція, координація, фізична сила для ефективних ударів. Для любителів волейбол — поширена розвага і спосіб відпочинку завдяки простоті правил і доступності інвентарю. Існують численні варіанти волейболу, що відгалузилися від основного виду, — пляжний волейбол (олімпійський вид з 1996 року), мініволейбол.</p>
 <a align="left" href="https://uk.wikipedia.org/wiki/%D0%92%D0%BE%D0%BB%D0%B5%D0%B9%D0%B1%D0%BE%D0%BB#%D0%97%D0%B0%D0%B3%D0%B0%D0%BB%D1%8C%D0%BD%D1%96_%D0%B2%D1%96%D0%B4%D0%BE%D0%BC%D0%BE%D1%81%D1%82%D1%96">Read on Wikipedia</a>
